// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Input Standard smoke-test 1`] = `
<div class="nhsuk-form-group">
  <label class="nhsuk-label"
         id="input-example--label"
         for="input-example"
  >
    National Insurance Number
  </label>
  <input class="nhsuk-input"
         aria-labelledby="input-example--label"
         name="test-name"
         id="input-example"
         type="text"
  >
</div>
`;

exports[`Components/Input WithErrorBoolean smoke-test 1`] = `
<div class="nhsuk-form-group nhsuk-form-group--error">
  <label class="nhsuk-label"
         id="input-example--label"
         for="input-example"
  >
    National Insurance Number
  </label>
  <div class="nhsuk-hint"
       id="input-example--hint"
  >
    It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’.
  </div>
  <input class="nhsuk-input nhsuk-input--error"
         aria-describedby="input-example--hint"
         aria-labelledby="input-example--label"
         name="test-name"
         id="input-example"
         type="text"
  >
</div>
`;

exports[`Components/Input WithErrorString smoke-test 1`] = `
<div class="nhsuk-form-group nhsuk-form-group--error">
  <label class="nhsuk-label"
         id="input-example--label"
         for="input-example"
  >
    National Insurance Number
  </label>
  <div class="nhsuk-hint"
       id="input-example--hint"
  >
    It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’.
  </div>
  <span class="nhsuk-error-message"
        id="input-example--error-message"
        role="alert"
  >
    <span class="nhsuk-u-visually-hidden">
      Error:
    </span>
    Error message goes here
  </span>
  <input class="nhsuk-input nhsuk-input--error"
         aria-describedby="input-example--hint"
         aria-labelledby="input-example--label"
         name="test-name"
         id="input-example"
         type="text"
  >
</div>
`;

exports[`Components/Input WithHintText smoke-test 1`] = `
<div class="nhsuk-form-group">
  <label class="nhsuk-label"
         id="input-example--label"
         for="input-example"
  >
    National Insurance Number
  </label>
  <div class="nhsuk-hint"
       id="input-example--hint"
  >
    It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’.
  </div>
  <input class="nhsuk-input"
         aria-describedby="input-example--hint"
         aria-labelledby="input-example--label"
         name="test-name"
         id="input-example"
         type="text"
  >
</div>
`;

exports[`Components/Input WithWidthModifier smoke-test 1`] = `
<div class="nhsuk-form-group">
  <label class="nhsuk-label"
         id="input-example--label"
         for="input-example"
  >
    National Insurance Number
  </label>
  <div class="nhsuk-hint"
       id="input-example--hint"
  >
    It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’.
  </div>
  <input class="nhsuk-input nhsuk-input--width-10"
         aria-describedby="input-example--hint"
         aria-labelledby="input-example--label"
         name="test-name"
         id="input-example"
         type="text"
  >
</div>
`;
